# Image-Recognizer

./: .gitignore  Dockerfile  LICENSE  Pipfile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
recognizer/: .env.example  .env.exemple  manage.py
recognizer/dropzone/: apps.py  models.py  views.py
recognizer/dropzone/migrations/: 0001_initial.py
recognizer/frontend/: apps.py  context_processors.py  urls.py  views.py
recognizer/frontend/static/css/: form.css  slider.css
recognizer/frontend/static/images/: blue-bg.avif
recognizer/frontend/static/js/: app.js  (+3 more)
recognizer/frontend/static_src/: package-lock.json  package.json  postcss.config.js  tailwind.config.js
recognizer/frontend/templates/: base.html  main.html
recognizer/main/: admin.py  models.py  urls.py  views.py
recognizer/main/migrations/: 0001_initial.py
recognizer/mediauploadapp/: admin.py  apps.py  filechecker.py  forms.py  models.py  urls.py  views.py
recognizer/mediauploadapp/frontend/: tailwind.config.js
recognizer/mediauploadapp/migrations/: 0001_initial.py  0002_initial.py  0003_remove_photo_category.py  0004_remove_file_author_id_alter_photo_file_delete_book_and_more.py  0005_alter_photo_file.py
recognizer/mediauploadapp/model/: get_model.py
recognizer/recognizer/: asgi.py  settings.py  urls.py  wsgi.py
recognizer/theme/static_src/: tailwind.config.js
recognizer/theme/templates/: base.html
recognizer/users/: backends.py  decorators.py  forms.py  models.py  urls.py  views.py
recognizer/users/migrations/: 0001_initial.py  0002_alter_customuser_description.py
(+61 files in other folders)
